# Nashpy

./: .gitignore  .readthedocs.yml  .travis.yml  CHANGES.md  CITATION.md  LICENSE  Prototyping.ipynb  README.md  appveyor.yml  doctests.py  environment.yml  file.py  paper  paper.bib  paper.md  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: ci-debian-macos.yml  ci-windows.yml  config.yml  prose.yml  publish.yml  pythonpackage.yml  tests.yml
benchmarks/: benchmark_constantsum.py  benchmark_random.py  benchmark_unique.py  constantsum_support_enumeration().csv  constantsum_vertex_enumeration().csv  random_asymmetric_support_enumeration().csv  random_asymmetric_vertex_enumeration().csv  random_symmetric_support_enumeration().csv  random_symmetric_vertex_enumeration().csv  test_benchmarking.py  test_support_enumeration.py  unique_support_enumeration().csv  unique_vertex_enumeration().csv
demos/: demo_lemke_howson_lex.py  test_lemke_howson_lex.py
docs/: Makefile  conf.py  index.rst
docs/contributing/: index.rst
docs/discussion/: asymmetric-replicator-dynamics.rst  best-responses.rst  bibliography.rst  cooperation.rst  degenerate-games.rst  extensive-form-games.rst  fictitious-play.rst  index.rst  john-nash.rst  lemke-howson.rst  lp-duality.rst  moran-process.rst  normal-form-games.rst  other-python-game-theory-libraries.rst  repeated-games.rst  replicator-dynamics.rst  stochastic-fictitious-play.rst  strategies.rst  support-enumeration.rst  vertex-enumeration.rst
docs/how-to/: calculate-utilities.rst  check-best-responses.rst  create-a-game.rst  find-equilibria-for-large-games.rst  handle-degenerate-games.rst  index.rst  install-nashpy.rst  obtain-a-repeated-game.rst  use-fictitious-play.rst  (+18 more)
src/: test_script.py  test_variables.py
tests/: test_stochastic_fictitious_play.py
(+196 files in other folders)
